k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: contoso-air
  labels:
    name: contoso-air
    app: contoso-air
